[bug-fix]: disable zooming on mobile for der die das

--- a/src/tools/der_die_das/style.css
+++ b/src/tools/der_die_das/style.css
@@ -83,6 +83,7 @@ header ul {
     border-radius: 8px;
     border: 2px solid transparent;
     transition: all 0.3s ease;
+    touch-action: manipulation; 
 }
 
 .button:hover,
